# expenses-tracker

./: .gitignore  README.md  pyproject.toml
dashboard/: Dockerfile  dashboard.json  dashboards.yaml  datasources.yaml
database_schema/: categories_population.sql  schema.sql
python_script/: script.py
