[project]
name = "expenses-tracker"
version = "0.1.0"
description = "A script for saving expenses to sql database"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "psycopg[binary]>=3.2.9",
    "pyinstaller>=6.15.0",
    "python-dotenv>=1.1.1",
]

[project.optional-dependencies]
dev = ["pyinstaller>=6.15.0"]
